[gd_scene load_steps=14 format=3 uid="uid://dkdeu8ao8b384"]

[ext_resource type="Script" path="res://Scripts/Enemy/Cabron.gd" id="1_y4cbm"]
[ext_resource type="Texture2D" uid="uid://bsg2oslvfq0l0" path="res://Textures/Enemy/Cabron/melvin_babayaga.png" id="2_bmh0u"]
[ext_resource type="PackedScene" uid="uid://dv6532vya8aoa" path="res://Models/Cabron/Hair.tscn" id="3_gf5hu"]
[ext_resource type="ArrayMesh" uid="uid://cw4tjb885ktyt" path="res://Models/Cabron/Hoombus.obj" id="3_wdtf0"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cco4i"]
albedo_texture = ExtResource("2_bmh0u")
uv1_scale = Vector3(1.91, 1.91, 1.91)
uv1_offset = Vector3(-0.19, -0.435, 0)

[sub_resource type="SphereMesh" id="SphereMesh_t4sef"]
material = SubResource("StandardMaterial3D_cco4i")
radius = 0.25
height = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d1yhd"]
albedo_color = Color(0.486275, 0.486275, 0.486275, 1)

[sub_resource type="SphereMesh" id="SphereMesh_d3qce"]
material = SubResource("StandardMaterial3D_d1yhd")
radius = 0.25
height = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_u06vu"]
albedo_color = Color(0.486275, 0.486275, 0.486275, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_mnrd2"]
top_radius = 0.025
bottom_radius = 0.025
height = 0.75

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eqmsk"]
albedo_color = Color(0.329412, 0.156863, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gdh7q"]
albedo_color = Color(0, 0.956863, 0.988235, 1)

[sub_resource type="BoxMesh" id="BoxMesh_733gb"]
material = SubResource("StandardMaterial3D_gdh7q")
size = Vector3(0.1, 0.75, 0.095)

[node name="Cabron" type="Node3D"]
script = ExtResource("1_y4cbm")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="head"]
transform = Transform3D(0.630676, 0, 0.776046, 0, 1, 0, -0.776046, 0, 0.630676, 0, 1.85352, 0)
mesh = SubResource("SphereMesh_t4sef")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="head"]
transform = Transform3D(0.630676, 0, 0.776046, 0, 1.025, 0, -0.776046, 0, 0.630676, 0, 1.85352, -0.020894)
mesh = SubResource("SphereMesh_d3qce")
skeleton = NodePath("../..")

[node name="hair" parent="head" instance=ExtResource("3_gf5hu")]
transform = Transform3D(3.44, 0, 0, 0, 2.52, 0, 0, 0, 2.55, 0.0073324, 1.8658, 0.0598645)
visible = false

[node name="body" type="MeshInstance3D" parent="."]
transform = Transform3D(0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 0, 0, 0)
mesh = ExtResource("3_wdtf0")
surface_material_override/0 = SubResource("StandardMaterial3D_u06vu")

[node name="axe handle" type="MeshInstance3D" parent="body"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.442749, 0.902498, 0.0854885)
mesh = SubResource("CylinderMesh_mnrd2")
surface_material_override/0 = SubResource("StandardMaterial3D_eqmsk")

[node name="MeshInstance3D" type="MeshInstance3D" parent="body"]
transform = Transform3D(0.999999, 9.67024e-05, 0.00107648, -0.00010122, 0.999991, 0.00419124, -0.00107607, -0.00419134, 0.999991, 0.444027, 0.897536, 0.380216)
mesh = SubResource("BoxMesh_733gb")

[node name="Timer" type="Timer" parent="."]
wait_time = 4.85
autostart = true

[node name="EnableTimer" type="Timer" parent="."]
wait_time = 200.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="EnableTimer" to="." method="_on_enable_timer_timeout"]
